<resources>
    <string name="app_name">FoodMap</string>
    <string name="hello">Hello Foodmapyoyoyo! and taooooo and yyyyyyyyyy</string>
    <string name="button_select">SELECT</string>
    <string name="button_get_barcode">SEARCH</string>
    <string name="button_return">RETURN</string>

    <string name="resKind">More Choices</string>

    <string name="enter">START</string>

    <string name="google_app_id">100415</string>

    <string name="current_loc">Current Location</string>

    <string name="button_navigation">Navigation</string>
    <string name="phone_call">Phone Call</string>

    <string name="tv_1">Food Map  Version 1.01</string>
    <string name="tv_2">Developer : Tao Sun , XinYuan Guo</string>
    <string name="tv_3">Collecting the entire Montreal restaurant information, find your favorite food</string>
    <string name="tv_4">Welcome to take some suggestions to us, Email ：aiosmtl@gmail.com</string>
    <string name="tv_5">Terms of Service
By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.
1,You are responsible for your use of the Services, for any Content you provide, and for any consequences thereof, including the use of your Content by other users and our third party partners. You understand that your Content may be syndicated, broadcast, distributed, or published by our partners and if you do not have the right to submit Content for such use, it may subject you to liability.
2,make no warranty or representation and disclaim all responsibility and liability for the completeness, accuracy, availability, timeliness, security or reliability of the Services or any Content. The original authers of Content own the copyright.
3,These Terms are the entire and exclusive agreement between THIS app and you regarding the Services and these Terms supersede and replace any prior agreements between THIS app and you regarding the Services.
4,All rights reserved.</string>

    <string name="rb_tab1_name">Restaurant</string>
    <string name="rb_tab2_name">More</string>
    <string name="rb_tab3_name">Search</string>
    <string name="rb_tab4_name">Share</string>
    <string name="rb_tab5_name">About</string>

    <string name="detail_info">Restaurant Infomation :</string>
    <string name="detail_info_name">Restaurant Name :</string>
    <string name="detail_info_address">Address :</string>
    <string name="detail_info_postal">Postal Code:</string>
    <string name="detail_info_number">Telephone Number :</string>
    <string name="detail_info_desc">Description :</string>

    <string-array name="res_kind">
        <item>All</item>
        <item>Hotpot</item>
        <item>Northern food</item>
        <item>Special snacks</item>
        <item>Sichuan food</item>
        <item>Cantonese food</item>
        <item>Japanese and Korean cuisine</item>
        <item>Cooked wheaten food</item>
        <item>Buffet</item>
    </string-array>

</resources>
