<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_1"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_2"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_3"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_4"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="免责声明：一旦您使用本软件，即表示您愿意接受一下条约。 1、您应该对使用此软件的结果自行承担风险，若运行本软件后出现不良后果时，本软件对其合法性概不负责，亦不承担任何法律责任。 2、尊重网络版权问题，本软件信息均出自网络，为作者提供或整理而来。如有侵犯您的版权，请及时通知我们，将立即改正。 3、本说明不能在任何发布版本中被删除或更改，本软件如用于任何形式的商业用途，请与作者联系。 4、本软件著作权为本软件作者，本软件、免责声明最终解释权归本软件作者所有。 版权所有，Tao Sun ，XinYuan Guo"
        android:textSize="20sp"/>


</LinearLayout>
