<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.foodmap.foodmap.TabActivity1ResDetail">


    <ImageView
        android:id="@+id/detail_pic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/detail_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/Indigo_nav_color"
        android:layout_below="@+id/detail_pic"
        android:lines="1"
        android:text="@string/detail_info"/>

    <LinearLayout
        android:id="@+id/detail_title_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_info"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_info_title1"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/detail_info_name"/>

        <TextView
            android:id="@+id/detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_address_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_title_linearlayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_info_address"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/detail_info_address"/>

        <TextView
            android:id="@+id/detail_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/detail_postal_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_address_linearlayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_info_postal"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/detail_info_postal"/>

        <TextView
            android:id="@+id/detail_postal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:lines="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_number_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_postal_linearlayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_info_number"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/detail_info_number"/>

        <TextView
            android:id="@+id/detail_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:lines="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/detail_desc_linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/detail_number_linearlayout"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_info_desc"
            android:layout_width="150sp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/detail_info_desc"/>

        <TextView
            android:id="@+id/detail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>


</RelativeLayout>
